--- a/.github/workflows/chart.yml
+++ b/.github/workflows/chart.yml
@@ -18,7 +18,7 @@ jobs:
           helm package namespace-admission-controller
           helm repo index .
           mkdir public
-          mv namespace-admission-controller* ./public
+          mv namespace-admission-controller*.tgz ./public
           mv index.yaml ./public
 
       - name: Deploy to GitHub Pages
