--- a/namespace-admission-controller/templates/mutating-svc.yaml
+++ b/namespace-admission-controller/templates/mutating-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "namespace-admission-controller.mutating.fullname" . }}
+  name: {{ include "namespace-admission-controller.mutating.service.name" . }}
   labels:
     {{- include "namespace-admission-controller.mutating.labels" . | nindent 4 }}
 spec:
