--- a/namespace-admission-controller/templates/validating-svc.yaml
+++ b/namespace-admission-controller/templates/validating-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "namespace-admission-controller.validating.fullname" . }}
+  name: {{ include "namespace-admission-controller.validating.service.name" . }}
   labels:
     {{- include "namespace-admission-controller.validating.labels" . | nindent 4 }}
 spec:
