--- a/namespace-admission-controller/templates/validating-deployment.yaml
+++ b/namespace-admission-controller/templates/validating-deployment.yaml
@@ -50,7 +50,7 @@ spec:
       volumes:
         - name: {{ include "namespace-admission-controller.validating.fullname" . }}
           secret:
-            secretName: {{ include "namespace-admission-controller.fullname" . }}
+            secretName: {{ include "namespace-admission-controller.validating.fullname" . }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
