--- a/namespace-admission-controller/templates/mutating-configuration.yaml
+++ b/namespace-admission-controller/templates/mutating-configuration.yaml
@@ -1,4 +1,4 @@
-{{ $tls := fromYaml ( include "admission-controller.gen-certs" . ) }}
+{{ $tls := fromYaml ( include "admission-controller.mutating.gen-certs" . ) }}
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
