fix certificate unauthority error

--- a/namespace-admission-controller/templates/mutating-secrets.yaml
+++ b/namespace-admission-controller/templates/mutating-secrets.yaml
@@ -10,3 +10,27 @@ metadata:
 data:
   cert.pem: {{ $tls.clientCert }}
   key.pem: {{ $tls.clientKey }}
+---
+apiVersion: admissionregistration.k8s.io/v1
+kind: MutatingWebhookConfiguration
+metadata:
+  name: {{ include "namespace-admission-controller.mutating.fullname" . }}
+  labels:
+    {{- include "namespace-admission-controller.mutating.labels" . | nindent 4 }}
+webhooks:
+- name: {{ include "namespace-admission-controller.mutating.service.fullname" . }}
+  admissionReviewVersions:
+  - v1beta1
+  clientConfig:
+    caBundle: {{ $tls.caCert }}
+    service:
+      name: {{ include "namespace-admission-controller.mutating.service.name" . }}
+      namespace: {{ .Release.Namespace }}
+      path: "/"
+  rules:
+  - apiGroups: [""]
+    apiVersions: ["v1"]
+    operations: ["CREATE"]
+    resources: ["namespaces"]
+  sideEffects: None
+  timeoutSeconds: 5
